Fixed bug with FAB, changed z-index

--- a/Portfolio/css/portfolio.css
+++ b/Portfolio/css/portfolio.css
@@ -259,6 +259,7 @@ body {
     background-color: var(--primary-purple);
     color: var(--grayscale-100);
     border-color: var(--secondary-purple);
+    z-index: 10;
 }
 
 #btn-back-to-top:hover {
